crates/toml_edit/tests/snapshots/invalid/float/exp-dot-02.stderr
TOML parse error at line 1, column 16
  |
1 | exp-dot-02 = 1.e2
  |                ^
invalid fraction, expected digits
